# GrooveKit

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE  README.md
Resources/: development_setup.md  exampleGUISetup.cpp  exampleGUISetup.h
apps/GrooveKit/: CMakeLists.txt  main.cpp
cmake/: JUCEPath.cmake  TracktionPath.cmake
src/AppEngine/: AppEngine.cpp  AppEngine.h  CMakeLists.txt  GrooveKitUIBehaviour.h  MidiListener.cpp  MidiListener.h  MidiRecorder.cpp  MidiRecorder.h  TrackManager.cpp  TrackManager.h  ValidationUtils.h
src/AudioEngine/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
src/DrumSamplerEngine/: CMakeLists.txt  DefaultSampleLibrary.h  DrumSamplerEngineAdapter.cpp  DrumSamplerEngineAdapter.h
src/MIDIEngine/: CMakeLists.txt  MIDIEngine.cpp  MIDIEngine.h
src/PluginManager/: CMakeLists.txt  PluginEditorWindow.cpp  PluginEditorWindow.h  PluginManager.cpp  PluginManager.h
src/UI/: CMakeLists.txt  MainComponent.cpp  MainComponent.h
src/UI/DrumSamplerView/: DefaultSampleLibrary.cpp  DrumPadComponent.h  DrumSamplerComponent.h  DrumSamplerEngine.h  DrumSamplerLauncher.cpp  DrumSamplerLauncher.h  DrumSamplerView.h  SampleLibraryComponent.h
src/UI/MenuBar/: GrooveKitMenuBar.cpp  GrooveKitMenuBar.h
src/UI/MixView/: MixView.cpp  MixView.h  MixerPanel.cpp  MixerPanel.h
src/UI/MixView/ChannelComponents/: ChannelStrip.cpp  ChannelStrip.h
src/UI/MixView/ChannelComponents/ChannelStripComponents/: FaderComponent.h
src/UI/Plugins/FourOsc/: FourOscGUI.cpp  FourOscGUI.h  FourOscLookAndFeel.h
src/UI/Plugins/Synthesizer/: MorphLookAndFeel.h  MorphOsc.h  MorphSynthPlugin.cpp  MorphSynthPlugin.h  MorphSynthRegistration.h  MorphSynthView.cpp  MorphSynthView.h  MorphSynthWindow.h  MorphVoice.h
src/UI/PopupWindows/MidiInputDevice/: MidiInputDeviceWindow.cpp  MidiInputDeviceWindow.h
src/UI/PopupWindows/OutputDevice/: OutputDeviceWindow.cpp  OutputDeviceWindow.h
src/UI/PopupWindows/PianoRollComponents/: GridControlPanel.cpp  GridControlPanel.h  GridStyleSheet.cpp  GridStyleSheet.h  KeyboardComponent.cpp  KeyboardComponent.h  NoteComponent.cpp  NoteComponent.h  NoteGridComponent.cpp  NoteGridComponent.h  PConstants.h  PianoRollEditor.cpp  PianoRollEditor.h  TimelineComponent.cpp  TimelineComponent.h
src/UI/Settings/: AudioSettingsPanel.cpp  AudioSettingsPanel.h  MidiSettingsPanel.cpp  MidiSettingsPanel.h  SettingsDialog.cpp  SettingsDialog.h
src/UI/TrackView/: ExportOverlayComponent.h  GhostClipComponent.cpp  GhostClipComponent.h  LoopRangeComponent.cpp  LoopRangeComponent.h  PlayheadComponent.cpp  PlayheadComponent.h  TimelineComponent.cpp  TimelineComponent.h  TrackClip.cpp  TrackClip.h  TrackComponent.cpp  TrackComponent.h  TrackEditView.cpp  TrackEditView.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h  TrackListComponent.cpp  TrackListComponent.h
src/UI/TransportBar/: TransportBar.cpp  TransportBar.h
src/resources/: CMakeLists.txt
src/resources/Icons/: GrooveKit.icns
tests/: CMakeLists.txt
tests/manual/: test-scripts.md
tests/unit/: BPMValidationTests.cpp  TrackManagerTests.cpp
